# travel-plan-agent

./: .env.example  .gitignore  IMPORT_FIX_SUMMARY.md  MODULE_NAME_FIX_SUMMARY.md  Makefile  README.md  __init__.py  app.py  config.py  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh
.dbg/: trae-debug-log-itinerary-overview-no-redirect.ndjson
api/: __init__.py  intl_coords.py  server.py
application/: scheduler.py
application/builtin_agents/: academic.yaml  loader.py  travel.yaml  yunhe.yaml
application/cli/: main.py
application/trending/: manager.py
config/: .env.example  settings.py
core/: __init__.py  agent.py  auth.py  contxt_manager.py  llm.py  logging.py  mcp_catalog.py  memory.py  memory_distiller.py  memory_extractor.py  prompt_context.py  prompting.py  reasoning.py  runtime_facts.py  session.py  task_state.py  token.py  trace.py  trending.py
core/audit/: logger.py  sanitizer.py  schema.py
core/emotion/: detector.py  schema.py
core/intent/: travel_classifier.py
core/itinerary/: __init__.py  parser.py  repository.py
core/metrics/: collector.py
core/profile/: manager.py
docs/: API.md  FIX_DEV_GUIDE.md  MULTI_PLAN_UPGRADE_DESIGN.md  PROJECT_MODULE_OVERVIEW.md  README.md  UNIVERSAL_AGENT_DESIGN.md  UNIVERSAL_AGENT_DEV_GUIDE.md  architecture.md
docs/api/: API.md
domain/agent/: base.py  dynamic_agent.py  factory.py  orchestrator.py  repository.py  schema.py  travel_core.py
domain/feedback/: repository.py
domain/memory/: manager.py  memory_distiller.py  memory_extractor.py
domain/reasoning/: cost_guard.py  engine.py  prompt_context.py  prompting.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
infra/: db.py  health.py
mcps/: README.md
tests/: __init__.py  test_api.py  test_audit.py  test_context_manager.py  test_contxt_manager.py  test_itinerary.py  test_mcp_catalog.py  test_memory.py  test_memory_extractor_distiller.py  test_missing_info.py  test_prompting.py  test_reasoning.py  test_runtime_facts.py  test_session.py  test_task_state.py  test_tools.py  test_types.py
tools/: __init__.py  amap.py  base.py  catalog.py  executor.py  fliggy.py  http.py  interaction.py  mcp.py  policy.py  registry.py  travel.py
(+130 files in other folders)
