[project]
name = "claw"
version = "0.1.0"
description = "通用智能体平台 — 通用调度 + 领域 Agent + Skill + MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.6",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "prometheus-client>=0.20.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "application", "config", "domain", "infrastructure"]

# ===== Ruff: 代码风格 =====
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["api", "application", "config", "domain", "infrastructure"]

# ===== MyPy: 类型检查 =====
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["frontend/", "data/", "tests/"]

# ===== Pytest =====
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
